# CodeRecall

./: .env.example  .gitignore  PRD.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial.py  002_add_repo_progress.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py  worker.py
backend/app/routers/: chat.py  repos.py
backend/app/services/: embeddings.py  ingestion.py  retrieval.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/repos/[id]/chat/: page.tsx
frontend/src/lib/: api.ts
