[project]
name = "coderecall-backend"
version = "0.1.0"
description = "RAG backend for chatting with GitHub repositories"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.5.0",
    "openai>=1.50.0",
    "redis>=5.0.0",
    "rq>=1.16.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
